# apps/api/src/router/public.router.ts
@@ -4,6 +4,8 @@ import {
   createUnitInputSchema,
   leaseStatusSchema,
   propertyByIdInputSchema,
+  propertyImageUploadCompleteInputSchema,
+  propertyImageUploadInputSchema,
   propertyNotesInputSchema,
   propertyStatusInputSchema,
   listUnitsInputSchema,
@@ -44,35 +46,98 @@ export const publicRouter = router({
     })),
   properties: router({
     list: publicProcedure
-      .meta({ openapi: { method: "GET", path: "/properties", tags: ["Properties"] } })
+      .meta({
+        openapi: { method: "GET", path: "/properties", tags: ["Properties"] },
+      })
       .output(dataListSchema)
       .query(async ({ ctx }) => ({
         data: await appRouter.createCaller(ctx).properties.list(),
       })),
     byId: publicProcedure
-      .meta({ openapi: { method: "GET", path: "/properties/{id}", tags: ["Properties"] } })
+      .meta({
+        openapi: {
+          method: "GET",
+          path: "/properties/{id}",
+          tags: ["Properties"],
+        },
+      })
       .input(propertyByIdInputSchema)
       .output(propertyByIdResponseSchema)
       .query(async ({ ctx, input }) => ({
         data: await appRouter.createCaller(ctx).properties.byId(input),
       })),
     create: publicProcedure
-      .meta({ openapi: { method: "POST", path: "/properties", tags: ["Properties"] } })
+      .meta({
+        openapi: { method: "POST", path: "/properties", tags: ["Properties"] },
+      })
       .input(createPropertyInputSchema)
       .output(dataObjectSchema)
       .mutation(async ({ ctx, input }) => ({
         data: await appRouter.createCaller(ctx).properties.create(input),
       })),
     update: publicProcedure
-      .meta({ openapi: { method: "PUT", path: "/properties/{id}", tags: ["Properties"] } })
+      .meta({
+        openapi: {
+          method: "PUT",
+          path: "/properties/{id}",
+          tags: ["Properties"],
+        },
+      })
       .input(updatePropertyInputSchema)
       .output(dataObjectSchema)
       .mutation(async ({ ctx, input }) => ({
         data: await appRouter.createCaller(ctx).properties.update(input),
       })),
+    createImageUploadUrl: publicProcedure
+      .meta({
+        openapi: {
+          method: "POST",
+          path: "/properties/{id}/image-upload-url",
+          tags: ["Properties"],
+        },
+      })
+      .input(propertyImageUploadInputSchema)
+      .output(dataObjectSchema)
+      .mutation(async ({ ctx, input }) => ({
+        data: await appRouter
+          .createCaller(ctx)
+          .properties.createImageUploadUrl(input),
+      })),
+    completeImageUpload: publicProcedure
+      .meta({
+        openapi: {
+          method: "POST",
+          path: "/properties/{id}/image",
+          tags: ["Properties"],
+        },
+      })
+      .input(propertyImageUploadCompleteInputSchema)
+      .output(dataObjectSchema)
+      .mutation(async ({ ctx, input }) => ({
+        data: await appRouter
+          .createCaller(ctx)
+          .properties.completeImageUpload(input),
+      })),
+    deleteImage: publicProcedure
+      .meta({
+        openapi: {
+          method: "DELETE",
+          path: "/properties/{id}/image",
+          tags: ["Properties"],
+        },
+      })
+      .input(propertyByIdInputSchema)
+      .output(dataObjectSchema)
+      .mutation(async ({ ctx, input }) => ({
+        data: await appRouter.createCaller(ctx).properties.deleteImage(input),
+      })),
     archive: publicProcedure
       .meta({
-        openapi: { method: "PATCH", path: "/properties/{id}/archive", tags: ["Properties"] },
+        openapi: {
+          method: "PATCH",
+          path: "/properties/{id}/archive",
+          tags: ["Properties"],
+        },
       })
       .input(propertyByIdInputSchema)
       .output(dataObjectSchema)
@@ -81,7 +146,11 @@ export const publicRouter = router({
       })),
     inactivate: publicProcedure
       .meta({
-        openapi: { method: "POST", path: "/properties/{id}/inactive", tags: ["Properties"] },
+        openapi: {
+          method: "POST",
+          path: "/properties/{id}/inactive",
+          tags: ["Properties"],
+        },
       })
       .input(propertyStatusInputSchema)
       .output(dataObjectSchema)
@@ -90,7 +159,11 @@ export const publicRouter = router({
       })),
     reactivate: publicProcedure
       .meta({
-        openapi: { method: "POST", path: "/properties/{id}/reactivate", tags: ["Properties"] },
+        openapi: {
+          method: "POST",
+          path: "/properties/{id}/reactivate",
+          tags: ["Properties"],
+        },
       })
       .input(propertyStatusInputSchema)
       .output(dataObjectSchema)
@@ -98,7 +171,13 @@ export const publicRouter = router({
         data: await appRouter.createCaller(ctx).properties.reactivate(input),
       })),
     delete: publicProcedure
-      .meta({ openapi: { method: "DELETE", path: "/properties/{id}", tags: ["Properties"] } })
+      .meta({
+        openapi: {
+          method: "DELETE",
+          path: "/properties/{id}",
+          tags: ["Properties"],
+        },
+      })
       .input(propertyByIdInputSchema)
       .output(dataObjectSchema)
       .mutation(async ({ ctx, input }) => ({
@@ -106,7 +185,11 @@ export const publicRouter = router({
       })),
     updateNotes: publicProcedure
       .meta({
-        openapi: { method: "PATCH", path: "/properties/{id}/notes", tags: ["Properties"] },
+        openapi: {
+          method: "PATCH",
+          path: "/properties/{id}/notes",
+          tags: ["Properties"],
+        },
       })
       .input(propertyNotesInputSchema)
       .output(dataObjectSchema)
@@ -131,7 +214,13 @@ export const publicRouter = router({
   }),
   unitOptions: router({
     list: publicProcedure
-      .meta({ openapi: { method: "GET", path: "/unit-options", tags: ["Unit options"] } })
+      .meta({
+        openapi: {
+          method: "GET",
+          path: "/unit-options",
+          tags: ["Unit options"],
+        },
+      })
       .output(dataObjectSchema)
       .query(async ({ ctx }) => ({
         data: await appRouter.createCaller(ctx).unitOptions.list(),
@@ -139,13 +228,21 @@ export const publicRouter = router({
   }),
   amenities: router({
     list: publicProcedure
-      .meta({ openapi: { method: "GET", path: "/amenities", tags: ["Amenities"] } })
+      .meta({
+        openapi: { method: "GET", path: "/amenities", tags: ["Amenities"] },
+      })
       .output(dataListSchema)
       .query(async ({ ctx }) => ({
         data: await appRouter.createCaller(ctx).amenities.list(),
       })),
     update: publicProcedure
-      .meta({ openapi: { method: "PUT", path: "/amenities/{id}", tags: ["Amenities"] } })
+      .meta({
+        openapi: {
+          method: "PUT",
+          path: "/amenities/{id}",
+          tags: ["Amenities"],
+        },
+      })
       .input(updateAmenityInputSchema)
       .output(dataObjectSchema)
       .mutation(async ({ ctx, input }) => ({
@@ -161,7 +258,9 @@ export const publicRouter = router({
         data: await appRouter.createCaller(ctx).units.list(input),
       })),
     byId: publicProcedure
-      .meta({ openapi: { method: "GET", path: "/units/{id}", tags: ["Units"] } })
+      .meta({
+        openapi: { method: "GET", path: "/units/{id}", tags: ["Units"] },
+      })
       .input(unitByIdInputSchema)
       .output(z.object({ data: objectSchema.nullable() }))
       .query(async ({ ctx, input }) => ({
@@ -175,14 +274,18 @@ export const publicRouter = router({
         data: await appRouter.createCaller(ctx).units.create(input),
       })),
     update: publicProcedure
-      .meta({ openapi: { method: "PATCH", path: "/units/{id}", tags: ["Units"] } })
+      .meta({
+        openapi: { method: "PATCH", path: "/units/{id}", tags: ["Units"] },
+      })
       .input(updateUnitInputSchema)
       .output(dataObjectSchema)
       .mutation(async ({ ctx, input }) => ({
         data: await appRouter.createCaller(ctx).units.update(input),
       })),
     delete: publicProcedure
-      .meta({ openapi: { method: "DELETE", path: "/units/{id}", tags: ["Units"] } })
+      .meta({
+        openapi: { method: "DELETE", path: "/units/{id}", tags: ["Units"] },
+      })
       .input(unitByIdInputSchema)
       .output(dataObjectSchema)
       .mutation(async ({ ctx, input }) => ({
